--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ export CHAIN_NAME_SCHAIN="Bob"
 export URL_W3_MAIN_NET="https://rinkeby.infura.io/v3/<APIKEY>"
 export URL_W3_S_CHAIN="http://127.0.0.1:15000"
 
-export ACCOUNT_FOR_MAIN_NET="<ETHEREUM ACCOUNT>"
+export ACCOUNT_FOR_MAINNET="<ETHEREUM ACCOUNT>"
 export ACCOUNT_FOR_SCHAIN="0x66c5a87f4a49DD75e970055A265E8dd5C3F8f852"
 
 export CHAIN_ID_MAIN_NET="-4"
