--- a/config0.json
+++ b/config0.json
@@ -297,8 +297,8 @@
             "logLevelProposal": "trace",
             "adminOrigins": [ "*" ],
             "ipc": false,
-            "ipcpath": "./ipcx",
-            "db-path": "./node",
+            "ipcpath": "/data_dir/ipc",
+            "db-path": "/data_dir/node",
             "httpRpcPort": 15000,
             "httpsRpcPort": 15010,
             "wsRpcPort": 15020,
