--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 export PRIVATE_KEY_FOR_MAINNET="<ETHEREUM ACCOUNT PRIVATE KEY>"
 export ACCOUNT_FOR_MAINNET="<ETHEREUM ACCOUNT>"
 export URL_W3_MAIN_NET="https://rinkeby.infura.io/v3/<APIKEY>"
-export CHAIN_ID_MAIN_NET="-4"
+export CHAIN_ID_MAIN_NET="4"
 
 # Do not change variables below
 
@@ -14,3 +14,5 @@ export CHAIN_NAME_SCHAIN="Bob"
 export URL_W3_S_CHAIN="http://127.0.0.1:15000"
 export CHAIN_ID_S_CHAIN="-4"
 export INSECURE_PRIVATE_KEY_FOR_MAINNET=$PRIVATE_KEY_FOR_MAINNET
+export NETWORK_FOR_MAINNET="mainnet"
+export NETWORK_FOR_SCHAIN="schain"
