--- a/config0.json
+++ b/config0.json
@@ -21,6 +21,18 @@
         "durationLimit": "0x0d",
         "blockReward": "0x4563918244F40000"
     },
+    "unddos": {
+        "origins": [
+            {
+                "origin": [ "*" ],
+                "ban_lengthy": 120,
+                "ban_peak": 15,
+                "max_calls_per_minute": 15000,
+                "max_calls_per_second": 2500,
+                "max_ws_conn": 200
+            }
+        ]
+    },
     "genesis": {
         "nonce": "0x0",
         "timestamp": "0",
