SKALE-3541 fix .env sample

--- a/.env-sample
+++ b/.env-sample
@@ -12,6 +12,6 @@ export INSECURE_PRIVATE_KEY_FOR_SCHAIN="80EBC2E00B8F13C5E2622B5694AB63EE80F7C539
 export PRIVATE_KEY_FOR_SCHAIN=$INSECURE_PRIVATE_KEY_FOR_SCHAIN
 export CHAIN_NAME_SCHAIN="Bob"
 export URL_W3_S_CHAIN="http://127.0.0.1:15000"
-export CHAIN_ID_S_CHAIN="-4"
+export CHAIN_ID_S_CHAIN="0x12345"
 export NETWORK_FOR_ETHEREUM="mainnet"
 export NETWORK_FOR_SCHAIN="schain"
