IMA SDK is updated to latest IMA and skaled

--- a/config0.json
+++ b/config0.json
@@ -1,26 +1,26 @@
 {
     "sealEngine": "Ethash",
     "params": {
+        "EIP150ForkBlock": "0x00",
+        "EIP158ForkBlock": "0x00",
         "accountStartNonce": "0x00",
-        "homesteadForkBlock": "0x0",
-        "daoHardforkBlock": "0x0",
-        "EIP150ForkBlock": "0x0",
-        "EIP158ForkBlock": "0x0",
+        "blockReward": "0x4563918244F40000",
         "byzantiumForkBlock": "0x0",
-        "constantinopleForkBlock": "0x0",
-        "skaleUnlimitedForkBlock": "0x0",
-        "networkID": "12313219",
         "chainID": "0x12345",
-        "maximumExtraDataSize": "0x20",
-        "tieBreakingGas": false,
-        "minGasLimit": "0x47E7C4000000",
-        "maxGasLimit": "7fffffffffffffff",
-        "gasLimitBoundDivisor": "0x0400",
-        "minimumDifficulty": "0x020000",
+        "constantinopleForkBlock": "0x0",
+        "daoHardforkBlock": "0x0",
         "difficultyBoundDivisor": "0x0800",
         "durationLimit": "0x0d",
-        "blockReward": "0x4563918244F40000",
-        "externalGasDifficulty": "0x01"
+        "gasLimitBoundDivisor": "0x0400",
+        "homesteadForkBlock": "0x0",
+        "istanbulForkBlock": "0x0",
+        "maxGasLimit": "7fffffffffffffff",
+        "maximumExtraDataSize": "0x20",
+        "minGasLimit": "0x47E7C4000000",
+        "minimumDifficulty": "0x020000",
+        "networkID": "12313219",
+        "skaleUnlimitedForkBlock": "0x0",
+        "tieBreakingGas": false
     },
     "unddos": {
         "origins": [
@@ -969,7 +969,7 @@
             "schainName": "TestChain",
             "schainID": 1,
             "schainOwner": "0x66c5a87f4a49dd75e970055a265e8dd5c3f8f852",
-            "storageLimit": 10000000,
+            "contractStorageLimit": 10000000,
             "emptyBlockIntervalMs": 5000,
             "freeContractDeployment": true,
             "nodes": [
