--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     ganache:
         image: trufflesuite/ganache-cli:beta
         container_name: ima_sdk_ganache
-        command: --account="0x${PRIVATE_KEY_FOR_ETHEREUM},100000000000000000000000000" --account="0x${PRIVATE_KEY_FOR_SCHAIN},100000000000000000000000000" -l 80000000
+        command: --account="0x${TEST_PRIVATE_KEY},100000000000000000000000000" --account="0x${PRIVATE_KEY_FOR_ETHEREUM},100000000000000000000000000" --account="0x${PRIVATE_KEY_FOR_SCHAIN},100000000000000000000000000" -l 80000000
         ports:
             - "8545:8545"
             - "8546:8546"
