SKALE-4458 Add usage example

--- a/.env-compose-sample
+++ b/.env-compose-sample
@@ -1,5 +1,5 @@
-export PRIVATE_KEY_FOR_ETHEREUM="<ETHEREUM ACCOUNT PRIVATE KEY>"
-export ACCOUNT_FOR_ETHEREUM="<ETHEREUM ACCOUNT>"
+SDK_PRIVATE_KEY=
+SDK_ADDRESS=
 
-export ACCOUNT_FOR_SCHAIN="<ETHEREUM ACCOUNT>"
-export PRIVATE_KEY_FOR_SCHAIN="<ETHEREUM ACCOUNT PRIVATE KEY>"
+TEST_PRIVATE_KEY=
+TEST_ADDRESS=
