--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,10 +42,18 @@ services:
         container_name: ima_sdk_ganache
         command: --account="0x${TEST_PRIVATE_KEY},100000000000000000000000000" --account="0x${SDK_PRIVATE_KEY},100000000000000000000000000" -l 80000000
         ports:
-            - "8545:8545"
-            - "8546:8546"
+            - "1545:8545"
+            - "1546:8546"
         networks: 
             - ima
+    nginx:
+        image: nginx:1.21.1
+        container_name: ima_sdk_nginx
+        network_mode: host
+        volumes:
+            - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./ssl:/ssl:ro
+        
 
 networks:
     ima:
