--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     ganache:
         image: trufflesuite/ganache-cli:beta
         container_name: ima_sdk_ganache
-        command: --account="0x${TEST_PRIVATE_KEY},100000000000000000000000000" --account="0x${SDK_PRIVATE_KEY},100000000000000000000000000" -l 80000000
+        command: --db /app/db --account="0x${TEST_PRIVATE_KEY},100000000000000000000000000" --account="0x${SDK_PRIVATE_KEY},100000000000000000000000000" -l 80000000
         ports:
             - "1545:8545"
             - "1546:8546"
@@ -53,7 +53,7 @@ services:
         volumes:
             - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf:ro
             - ./ssl:/ssl:ro
-        
+            - ./db:/app.db
 
 networks:
     ima:
