--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
             - "1546:8546"
         networks: 
             - ima
+        volumes:
+            - ./db:/app/db
     nginx:
         image: nginx:1.21.1
         container_name: ima_sdk_nginx
@@ -53,7 +55,7 @@ services:
         volumes:
             - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf:ro
             - ./ssl:/ssl:ro
-            - ./db:/app.db
+            - ./db:/app/db
 
 networks:
     ima:
