SKALE-4456 Custom chainId for ganache

--- a/scripts/run_ganache.sh.template
+++ b/scripts/run_ganache.sh.template
@@ -5,3 +5,4 @@ node /app/ganache-core.docker.cli.js --db /app/db \
 --account="0x${SDK_PRIVATE_KEY},100000000000000000000000000" \
 {{ additionalAccounts }}
 -l 80000000
+--chainId 0x5661
