SKALE-4566 Update base structure, use new IMA contracts and new skaled

--- a/config0.json
+++ b/config0.json
@@ -851,8 +851,8 @@
             "basePort": 1231,
             "bindIP6": "::",
             "basePort6": 1231,
-            "logLevel": "trace",
-            "logLevelProposal": "trace",
+            "logLevel": "info",
+            "logLevelProposal": "info",
             "adminOrigins": [
                 "*"
             ],
