--- a/conf/nginx.conf.template
+++ b/conf/nginx.conf.template
@@ -2,9 +2,8 @@ limit_req_zone $binary_remote_addr zone=one:10m rate=7r/s;
 
 server {
     listen 80;
-    listen 443 ssl;
-    ssl_certificate     /ssl/ssl_cert;
-    ssl_certificate_key /ssl/ssl_key;
+
+    {{ ssl }}
 
     proxy_read_timeout 500s;
     proxy_connect_timeout 500s;
@@ -18,7 +17,7 @@ server {
 
     location /schain {
         proxy_http_version 1.1;
-        proxy_pass  http://127.0.0.1:15000/;
+        proxy_pass  http://sdk:15000/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
@@ -27,12 +26,14 @@ server {
 
     location /mainnet {
         proxy_http_version 1.1;
-        proxy_pass  http://127.0.0.1:1545/;
+        proxy_pass  http://ganache:1545/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
-    
+    location / {
+        root /filestorage;
+    }
 }
