--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,11 +55,16 @@ services:
     nginx:
         image: nginx:1.21.1
         container_name: ima_sdk_nginx
-        network_mode: host
+        ports:
+            - "80:80"
+            - "443:443"
         volumes:
             - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf:ro
             - ./ssl:/ssl:ro
             - ./db:/app/db
+            - ./data_dir/filestorage:/filestorage:ro
+        networks:
+            - ima
 
 networks:
     ima:
