SKALE-4624 Add UI support for nginx

--- a/conf/nginx.conf.template
+++ b/conf/nginx.conf.template
@@ -26,14 +26,23 @@ server {
 
     location /mainnet {
         proxy_http_version 1.1;
-        proxy_pass  http://ganache:1545/;
+        proxy_pass  http://ganache:8545/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
-    location / {
+    location /fs {
         root /filestorage;
     }
+
+    location / {
+        proxy_http_version 1.1;
+        proxy_pass  http://host.docker.internal:3000/;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+     }
 }
