--- a/conf/nginx.conf.template
+++ b/conf/nginx.conf.template
@@ -33,8 +33,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /fs {
-        root /filestorage;
+    location /fs/ {
+        alias /filestorage/;
     }
 
     location / {
