--- a/config0.json
+++ b/config0.json
@@ -982,6 +982,11 @@
             "httpsRpcPort6": 15010,
             "wsRpcPort6": 15040,
             "wssRpcPort6": 15050,
+            "infoHttpRpcPort": 16010,
+            "pgHttpRpcPort": 16020,
+            "pgHttpsRpcPort": 16030,
+            "infoPgHttpRpcPort": 16040,
+            "infoPgHttpsRpcPort": 16050,
             "acceptors": 1,
             "max-connections": 0,
             "max-http-queues": 0,
