--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
+    - name: Install deps
+      run: apt update && apt install build-essential
     - name: Build and publish container
       run: |
         export BRANCH=${GITHUB_REF##*/}
