--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: '14'
     - name: Install deps
-      run: sudo apt update && sudo apt install build-essential
+      run: sudo apt update && sudo apt install build-essential && sudo npm install -g node-gyp
     - name: Build and publish container
       run: |
         export BRANCH=${GITHUB_REF##*/}
