SKALE-4821 Remove proxygen ports, update publish pipeline

--- a/config0.json
+++ b/config0.json
@@ -983,10 +983,7 @@
             "wsRpcPort6": 15040,
             "wssRpcPort6": 15050,
             "infoHttpRpcPort": 16010,
-            "pgHttpRpcPort": 16020,
-            "pgHttpsRpcPort": 16030,
-            "infoPgHttpRpcPort": 16040,
-            "infoPgHttpsRpcPort": 16050,
+            "infoHttpsRpcPort": 16020,
             "acceptors": 1,
             "max-connections": 0,
             "max-http-queues": 0,
