--- a/config0.json
+++ b/config0.json
@@ -978,10 +978,6 @@
             "httpsRpcPort": 15010,
             "wsRpcPort": 15020,
             "wssRpcPort": 15030,
-            "httpRpcPort6": 15000,
-            "httpsRpcPort6": 15010,
-            "wsRpcPort6": 15040,
-            "wssRpcPort6": 15050,
             "infoHttpRpcPort": 16010,
             "infoHttpsRpcPort": 16020,
             "acceptors": 1,
@@ -1100,8 +1096,6 @@
                     "nodeID": 1112,
                     "ip": "127.0.0.1",
                     "basePort": 1231,
-                    "ip6": "::1",
-                    "basePort6": 1231,
                     "schainIndex": 1,
                     "publicKey": "",
                     "blsPublicKey0": "",
@@ -1111,11 +1105,7 @@
                     "httpRpcPort": 15000,
                     "httpsRpcPort": 15010,
                     "wsRpcPort": 15020,
-                    "wssRpcPort": 15030,
-                    "httpRpcPort6": 15000,
-                    "httpsRpcPort6": 15010,
-                    "wsRpcPort6": 15040,
-                    "wssRpcPort6": 15050
+                    "wssRpcPort": 15030
                 }
             ]
         }
