--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,42 @@
 version: '3'
 services:
+    schain_a:
+        environment:
+            SDK_PRIVATE_KEY: $SDK_PRIVATE_KEY
+            SDK_ADDRESS: $SDK_ADDRESS
+            TEST_PRIVATE_KEY: $TEST_PRIVATE_KEY
+            TEST_ADDRESS: $TEST_ADDRESS
+
+            NO_SIGNATURES: "true"
+            CHAIN_NAME_SCHAIN: "Alice"
+            URL_W3_S_CHAIN: http://127.0.0.1:25000
+            URL_W3_ETHEREUM: http://ganache:8545
+            CHAIN_ID_S_CHAIN: "0x12345"
+            CHAIN_ID_MAIN_NET: "0x5661"
+            NETWORK_FOR_ETHEREUM: "mainnet"
+            NETWORK_FOR_SCHAIN: "schain"
+            NO_NTP_CHECK: "True"
+        image: skalenetwork/ima_sdk:$VERSION
+        container_name: schain_a
+        ports:
+            - "15000:15000"
+            - "15010:15010"
+            - "15020:15020"
+            - "15030:15030"
+            - "15040:15040"
+            - "15050:15050"
+        volumes:
+            -  ./schain_a/dev_dir:/dev_dir
+            -  ./schain_a/data_dir:/data_dir
+            -  ./schain_a/contracts_data:/IMA/proxy/data
+        logging:
+            driver: json-file
+            options:
+                max-size: "10m"
+                max-file: "4"
+        restart: unless-stopped
+        networks:
+            - ima
     sdk:
         environment:
             SDK_PRIVATE_KEY: $SDK_PRIVATE_KEY
