--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
             NETWORK_FOR_ETHEREUM: "mainnet"
             NETWORK_FOR_SCHAIN: "schain"
             NO_NTP_CHECK: "True"
-        image: skalenetwork/ima_sdk:0.3.1-develop.4
+        image: skalenetwork/ima_sdk:$SDK_VERSION
         container_name: ima_sdk
         ports:
             - "15000:15000"
