.env-compose-sample with SDK_VERSION=
not included in env sample or noted in docs

Without SDK_VERSION, `WAIT=True bash scripts/run_sdk.sh` returns `scripts/run_sdk.sh: line 27: SDK_VERSION: Need to set SDK_VERSION`

--- a/.env-compose-sample
+++ b/.env-compose-sample
@@ -4,6 +4,9 @@ SDK_ADDRESS=
 TEST_PRIVATE_KEY=
 TEST_ADDRESS=
 
+# Example format SDK_VERSION=0.3.0
+SDK_VERSION=
+
 # optional vars
 
 SKALED_LOG_LEVEL=
